# cryptod

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
.devcontainer/: devcontainer.json
common/include/: config_reader.h  crypto_capnp_common.h  crypto_client.h  crypto_codes.h  crypto_config.h  crypto_exception.h  crypto_globals.h  crypto_result.h  crypto_service_base.h  crypto_socket_hdr.h  crypto_types.h  crypto_utils.h  helpers.h  icrypto_client.h  icrypto_service.h  ikeystore.h  log_macro.h  secure_vector.h  thread_safe_fifo.h  unix_socket.h
common/protocol/: crypto.capnp
crypto_daemon/: CMakeLists.txt
crypto_daemon/crypto_backend/dummy/: CMakeLists.txt
crypto_daemon/crypto_backend/dummy/include/: dummy_backend.h  dummy_ecdsa.h  dummy_hmac.h
crypto_daemon/crypto_backend/dummy/src/: dummy_ecdsa.cpp  dummy_hmac.cpp
crypto_daemon/crypto_backend/include/: crypto_backend.h
crypto_daemon/crypto_backend/ossl/: CMakeLists.txt
crypto_daemon/crypto_backend/ossl/include/: ossl_backend.h  ossl_ecdsa.h  ossl_hmac.h
crypto_daemon/crypto_backend/ossl/src/: ossl_ecdsa.cpp  ossl_hmac.cpp
crypto_daemon/crypto_backend/ossl/test/: CMakeLists.txt  main.cpp
crypto_daemon/crypto_service/: CMakeLists.txt
crypto_daemon/crypto_service/capnp_service/: CMakeLists.txt
crypto_daemon/crypto_service/capnp_service/src/: capnp_crypto_service.cpp  capnp_crypto_service.h  capnp_service.cpp
crypto_daemon/crypto_service/include/: crypto_service.h
crypto_daemon/crypto_service/socket_service/: CMakeLists.txt
crypto_daemon/crypto_service/socket_service/src/: socket_crypto_service.cpp  socket_crypto_service.h
crypto_daemon/crypto_service/src/: crypto.capnp.c++  crypto_service.cpp
crypto_daemon/keystore/: CMakeLists.txt
crypto_daemon/keystore/include/: keystore.h
crypto_daemon/keystore/src/: keystore.cpp
crypto_daemon/src/: crypto_daemon.cpp  crypto_daemon.h  main.cpp
crypto_daemon/test/: CMakeLists.txt  main.cpp
cryptod_ossl_provider/: CMakeLists.txt
cryptod_ossl_provider/crypto_client/: CMakeLists.txt
cryptod_ossl_provider/crypto_client/capnp_client/: CMakeLists.txt
cryptod_ossl_provider/crypto_client/capnp_client/src/: capnp_crypto_client.cpp  crypto.capnp.c++  crypto.capnp.h  crypto_client copy.cpp  crypto_client.cpp
cryptod_ossl_provider/crypto_client/socket_client/: CMakeLists.txt
cryptod_ossl_provider/crypto_client/socket_client/src/: socket_crypto_client.cpp
cryptod_ossl_provider/crypto_client/src/: crypto.capnp.h  crypto_client.cpp
cryptod_ossl_provider/src/: cdp_hmac.c  cryptod_provider.c  cryptod_provider.h
data/: aes256_2.key  benchmark_hmac.sh  cryptod.ini  data1024.tmp  ec_private.der  ec_public.der  env.sh  input3.txt  run_cryptod.sh  run_hmac.sh  signature.der  test_ecdsa.sh  test_hmac.sh
keystore_cli/: CMakeLists.txt
keystore_cli/src/: main.cpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/src/: main.cpp
test/concurrent/: CMakeLists.txt
test/concurrent/src/: main.cpp
